deployments/k8s/infrastructure/base/redis/redis-insight-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-insight
  labels:
    app: redis-insight
spec:
  podSelector:
    matchLabels:
      app: redis-insight
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 5540
